@@ -1,8 +1,8 @@
 import org.jetbrains.kotlin.gradle.plugin.KotlinJsCompilerType
+import org.apache.tools.ant.taskdefs.condition.Os
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
 
 plugins {
-    alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.multiplatform)
 }
 
@@ -12,18 +12,19 @@ repositories {
 }
 
 kotlin {
-    androidTarget()
+    tasks.withType<JavaExec> { jvmArgs("--enable-preview", "--enable-native-access=ALL-UNNAMED") }
     jvm {
         compilations {
             val main by getting
 
-            val mainClass = "com.lehaine.rune.PixelExampleKt"
+            val mainClassName = "com.lehaine.rune.PixelExampleKt"
             tasks {
                 register<Copy>("copyResources") {
                     group = "package"
                     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+                    dependsOn(named("jvmProcessResources"))
                     from(main.output.resourcesDir)
-                    destinationDir = File("${layout.buildDirectory}/publish")
+                    destinationDir = File("${layout.buildDirectory.asFile.get()}/publish")
                 }
                 register<Jar>("packageFatJar") {
                     group = "package"
@@ -31,23 +32,36 @@ kotlin {
                     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
                     dependsOn(named("jvmJar"))
                     dependsOn(named("copyResources"))
-                    manifest {
-                        attributes["Main-Class"] = mainClass
-                    }
-                    destinationDirectory.set(File("${layout.buildDirectory}/publish/"))
+                    manifest { attributes["Main-Class"] = mainClassName }
+                    destinationDirectory.set(File("${layout.buildDirectory.asFile.get()}/publish/"))
                     from(
                         main.runtimeDependencyFiles.map { if (it.isDirectory) it else zipTree(it) },
                         main.output.classesDirs
                     )
                     doLast {
-                        project.logger.lifecycle("[LittleKt] The packaged jar is available at: ${outputs.files.first().parent}")
+                        logger.lifecycle(
+                            "[LittleKt] The packaged jar is available at: ${outputs.files.first().parent}"
+                        )
                     }
                 }
-
+                if (Os.isFamily(Os.FAMILY_MAC)) {
+                    register<JavaExec>("jvmRun") {
+                        jvmArgs("-XstartOnFirstThread")
+                        mainClass.set(mainClassName)
+                        kotlin {
+                            val mainCompile = targets["jvm"].compilations["main"]
+                            dependsOn(mainCompile.compileAllTaskName)
+                            classpath(
+                                { mainCompile.output.allOutputs.files },
+                                (configurations["jvmRuntimeClasspath"])
+                            )
+                        }
+                    }
+                }
             }
         }
         compilations.all {
-            kotlinOptions.jvmTarget = "17"
+            kotlinOptions.jvmTarget = "21"
         }
         testRuns["test"].executionTask.configure {
             useJUnit()
@@ -95,15 +109,13 @@ kotlin {
         val jvmTest by getting
         val jsMain by getting {
             dependencies {
-                val kotlinxHtmlVersion = "0.7.2"
+                val kotlinxHtmlVersion = "0.11.0"
                 implementation(project(":core"))
                 implementation("org.jetbrains.kotlinx:kotlinx-html-js:$kotlinxHtmlVersion")
             }
 
         }
         val jsTest by getting
-
-        val androidMain by getting
 
         all {
             languageSettings.apply {
@@ -116,19 +128,5 @@ kotlin {
                 optIn("kotlin.time.ExperimentalTime")
             }
         }
-    }
-}
-
-android {
-    namespace = "com.lehaine.littlekt.extras.samples"
-    sourceSets["main"].apply {
-        manifest.srcFile("src/androidMain/AndroidManifest.xml")
-        assets.srcDirs("src/commonMain/resources")
-    }
-    compileSdk = (findProperty("android.compileSdk") as String).toInt()
-
-    defaultConfig {
-        minSdk = (findProperty("android.minSdk") as String).toInt()
-        targetSdk = (findProperty("android.targetSdk") as String).toInt()
     }
 }
